--- a/index.html
+++ b/index.html
@@ -886,6 +886,9 @@
       <!-- menu header section -->
       <amp-layout layout="container" class="">
         <nav class="container row end-xs mx-auto">
+          <section>
+            <b>Eliah Mbwilo</b>
+          </section>
           <amp-selector
             class="tabs-with-selector col-md-8 col-lg-6 row around-xs"
             role="tablist"
