--- a/index.html
+++ b/index.html
@@ -884,11 +884,11 @@
         </nav>
       </amp-layout>
       <!-- menu header section -->
-      <amp-layout layout="container" class="">
-        <nav class="container row end-xs mx-auto">
-          <section>
-            <b>Eliah Mbwilo</b>
-          </section>
+      <amp-layout layout="container">
+        <nav class="container row middle-xs between-xs mx-auto">
+          <amp-layout layout="container">
+            <div><b>Eliah Mbwilo</b></div>
+          </amp-layout>
           <amp-selector
             class="tabs-with-selector col-md-8 col-lg-6 row around-xs"
             role="tablist"
