--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
       <amp-layout layout="container">
         <nav class="container row middle-xs between-xs mx-auto">
           <amp-layout layout="container">
-            <div><b>Eliah Mbwilo</b></div>
+            <a href=""><b>Eliah Mbwilo</b></a>
           </amp-layout>
           <amp-selector
             class="tabs-with-selector col-md-8 col-lg-6 row around-xs"
