--- a/index.html
+++ b/index.html
@@ -962,21 +962,10 @@
               Proficient computer scientist interested in designing and creating
               system architectures that are maintainable, reliable, robust, and
               most importantly intelligent.
-              <br />
-              I have the:
-              <br />
-              <ul>
-                <li>Ability to work well with others in a team or alone.</li>
-                <li>
-                  Ability to analyze software and hardware to find solutions
-                  that meet user requirements.
-                </li>
-                <li>Ability to perform review of programs to improve.</li>
-              </ul>
             </blockquote>
-            <blockquote>
+            <blockquote style="margin-left: 0">
               I have the:
-              <br />
+              <br>
               <ul>
                 <li>Ability to work well with others in a team or alone.</li>
                 <li>
