--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
       <amp-layout layout="container">
         <nav class="container row middle-xs between-xs mx-auto">
           <amp-layout layout="container">
-            <a href=""><b>Eliah Mbwilo</b></a>
+            <a href="" class="text-decoration-none"><b>Eliah Mbwilo</b></a>
           </amp-layout>
           <amp-selector
             class="tabs-with-selector col-md-8 col-lg-6 row around-xs"
@@ -965,7 +965,7 @@
             </blockquote>
             <blockquote style="margin-left: 0">
               I have the:
-              <br>
+              <br />
               <ul>
                 <li>Ability to work well with others in a team or alone.</li>
                 <li>
