--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       }
       html,
       body {
-        margin:0,
+        margin: 0;
         height: 100%;
       }
       main {
@@ -426,26 +426,26 @@
         }
 
         .col-sm,
-      .col-sm-6,
-      .col-sm-12 {
-        box-sizing: border-box;
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 auto;
-        flex: 0 0 auto;
-        padding-right: 0.5rem;
-        padding-left: 0.5rem;
-      }
+        .col-sm-6,
+        .col-sm-12 {
+          box-sizing: border-box;
+          -webkit-box-flex: 0;
+          -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+          padding-right: 0.5rem;
+          padding-left: 0.5rem;
+        }
 
-      .col-sm {
-        -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-        flex-grow: 1;
-        -ms-flex-preferred-size: 0;
-        flex-basis: 0;
-        max-width: 100%;
-      }
+        .col-sm {
+          -webkit-box-flex: 1;
+          -ms-flex-positive: 1;
+          flex-grow: 1;
+          -ms-flex-preferred-size: 0;
+          flex-basis: 0;
+          max-width: 100%;
+        }
 
-      .col-sm-6 {
+        .col-sm-6 {
           -ms-flex-preferred-size: 50%;
           flex-basis: 50%;
           max-width: 50%;
