--- a/index.html
+++ b/index.html
@@ -929,7 +929,10 @@
                   Ability to analyze software and hardware to find solutions
                   that meet user requirements.
                 </li>
-                <li>Ability to perform review of programs to improve.</li>
+                <li>
+                  Ability to perform review of programs to improve efficiency,
+                  correct errors, and verify operational capability.
+                </li>
               </ul>
             </blockquote>
             <br />
