--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@
           aria-labelledby="competencies"
           option
         >
-          <div style="margin: 2rem">
+          <amp-layout layout="container">
             <!-- skills section -->
             <section>
               <div class="inline-flex flex-column mb-3">
@@ -1144,10 +1144,30 @@
                 </div>
               </div>
             </section>
-          </div>
+          </amp-layout>
         </div>
         <div id="tabpanel3" role="tabpanel" aria-labelledby="tab3" option>
-          Tab three content...
+          <!-- experiences section -->
+          <amp-layout layout="container">
+            <div class="resume-item pb-0">
+              <h4>Alice Barkley</h4>
+              <p>
+                <em
+                  >Innovative and deadline-driven Graphic Designer with 3+ years
+                  of experience designing and developing user-centered
+                  digital/print marketing material from initial concept to
+                  final, polished deliverable.</em
+                >
+              </p>
+              <p></p>
+              <ul>
+                <li>Portland par 127,Orlando, FL</li>
+                <li>(123) 456-7891</li>
+                <li>alice.barkley@example.com</li>
+              </ul>
+              <p></p>
+            </div>
+          </amp-layout>
         </div>
         <div id="tabpanel4" role="tabpanel" aria-labelledby="tab4" option>
           Tab four content...
