--- a/index.html
+++ b/index.html
@@ -1170,14 +1170,18 @@
           <!-- experiences section -->
           <amp-layout layout="container">
             <div class="resume-item">
-              <h4 class="text-primary uppercase">Alice Barkley</h4>
+              <h4 class="text-primary uppercase">SmartStock Company Limited</h4>
+              <caption>
+                Dar es Salaam — Software Developer
+              </caption>
+              <em>Dec, 2019 - Present</em>
+              <dl>
+                <dd>
+                  Design and implementation of web and mobile applications.
+                </dd>
+              </dl>
               <p style="line-height: 24px">
-                <em
-                  >Innovative and deadline-driven Graphic Designer with 3+ years
-                  of experience designing and developing user-centered
-                  digital/print marketing material from initial concept to
-                  final, polished deliverable.</em
-                >
+                <em></em>
               </p>
               <p></p>
               <ul>
