--- a/index.html
+++ b/index.html
@@ -1005,9 +1005,11 @@
             </section>
           </amp-layout>
         </div>
+        <!-- profile panel -->
         <div id="tabpanel1" role="tabpanel" aria-labelledby="tab1" option>
           Tab one content...
         </div>
+        <!-- competencies panel -->
         <div
           id="tabpanel2"
           role="tabpanel"
@@ -1107,14 +1109,16 @@
               </div>
               <div class="row">
                 <div class="col-xs-6 col-lg-3 col-md-4">
-                  <div class="card shadow bg-secondary">
-                    <i class="ri-store-line" style="color: #ffbb2c"></i>
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary"
+                  >
+                    <i class="bi bi-shop-window" style="font-size: 1rem; color: #ffbb2c"></i>
                     <h3 class="m-0">Lorem Ipsum</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-md-0">
-                  <div class="card shadow bg-secondary">
+                  <div class="flex card shadow bg-secondary">
                     <i class="ri-bar-chart-box-line" style="color: #5578ff"></i>
                     <h3 class="m-0">Dolor Sitema</h3>
                   </div>
@@ -1166,8 +1170,8 @@
             </section>
           </amp-layout>
         </div>
+        <!-- experiences panel -->
         <div id="tabpanel3" role="tabpanel" aria-labelledby="tab3" option>
-          <!-- experiences section -->
           <amp-layout layout="container">
             <div class="resume-item">
               <h4 class="text-primary uppercase">SmartStock Company Limited</h4>
@@ -1188,12 +1192,15 @@
             </div>
           </amp-layout>
         </div>
+        <!-- contacts panel -->
         <div id="tabpanel4" role="tabpanel" aria-labelledby="tab4" option>
           Tab four content...
         </div>
+        <!-- contacts panel -->
         <div id="tabpanel5" role="tabpanel" aria-labelledby="tab5" option>
           Tab five content...
         </div>
+        <!-- contacts panel -->
         <div id="tabpanel6" role="tabpanel" aria-labelledby="contacts" option>
           <div style="margin: 2rem">
             <div class="inline-flex flex-column mb-3">
