icons font-size: 1.8rem;

--- a/index.html
+++ b/index.html
@@ -1112,56 +1112,80 @@
                   <div
                     class="flex middle-xs around-xs card shadow bg-secondary"
                   >
-                    <i class="bi bi-shop-window" style="font-size: 1rem; color: #ffbb2c"></i>
+                    <i
+                      class="bi bi-shop-window"
+                      style="font-size: 1.8rem; color: #ffbb2c"
+                    ></i>
                     <h3 class="m-0">Lorem Ipsum</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-md-0">
                   <div class="flex card shadow bg-secondary">
-                    <i class="ri-bar-chart-box-line" style="color: #5578ff"></i>
+                    <i
+                      class="ri-bar-chart-box-line"
+                      style="font-size: 1.8rem; color: #5578ff"
+                    ></i>
                     <h3 class="m-0">Dolor Sitema</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-md-0">
                   <div class="card shadow bg-secondary">
-                    <i class="ri-calendar-todo-line" style="color: #e80368"></i>
+                    <i
+                      class="ri-calendar-todo-line"
+                      style="font-size: 1.8rem; color: #e80368"
+                    ></i>
                     <h3 class="m-0">Sed perspiciatis</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-lg-0">
                   <div class="card shadow bg-secondary">
-                    <i class="ri-paint-brush-line" style="color: #e361ff"></i>
+                    <i
+                      class="ri-paint-brush-line"
+                      style="font-size: 1.8rem; color: #e361ff"
+                    ></i>
                     <h3 class="m-0">Magni Dolores</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
                   <div class="card shadow bg-secondary">
-                    <i class="ri-database-2-line" style="color: #47aeff"></i>
+                    <i
+                      class="ri-database-2-line"
+                      style="font-size: 1.8rem; color: #47aeff"
+                    ></i>
                     <h3 class="m-0">Nemo Enim</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
                   <div class="card shadow bg-secondary">
-                    <i class="ri-gradienter-line" style="color: #ffa76e"></i>
+                    <i
+                      class="ri-gradienter-line"
+                      style="font-size: 1.8rem; color: #ffa76e"
+                    ></i>
                     <h3 class="m-0">Eiusmod Tempor</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
                   <div class="card shadow bg-secondary">
-                    <i class="ri-file-list-3-line" style="color: #11dbcf"></i>
+                    <i
+                      class="ri-file-list-3-line"
+                      style="font-size: 1.8rem; color: #11dbcf"
+                    ></i>
                     <h3 class="m-0">Midela Teren</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
                   <div class="card shadow bg-secondary">
-                    <i class="ri-price-tag-2-line" style="color: #4233ff"></i>
+                    <i
+                      class="ri-price-tag-2-line"
+                      style="font-size: 1.8rem; color: #4233ff"
+                    ></i>
                     <h3 class="m-0">Pira Neve</h3>
                   </div>
                   <br />
