--- a/index.html
+++ b/index.html
@@ -1017,6 +1017,115 @@
           option
         >
           <amp-layout layout="container">
+            <!-- core competencies section -->
+            <section>
+              <div class="inline-flex flex-column mb-3">
+                <h2 style="margin-bottom: 0.25rem">Core Competencies</h2>
+                <div class="bg-primary" style="height: 2px"></div>
+              </div>
+              <div class="row">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                  >
+                    <i
+                      class="bi bi-shop-window"
+                      style="font-size: 1.8rem; color: #ffbb2c"
+                    ></i>
+                    <h3 class="m-0">Machine Learning</h3>
+                  </div>
+                  <br />
+                </div>
+                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
+                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                    <i
+                      class="ri-bar-chart-box-line"
+                      style="font-size: 1.8rem; color: #5578ff"
+                    ></i>
+                    <h3 class="m-0">Deep Learning</h3>
+                  </div>
+                  <br />
+                </div>
+                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
+                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                    <i
+                      class="ri-calendar-todo-line"
+                      style="font-size: 1.8rem; color: #e80368"
+                    ></i>
+                    <h3 class="m-0">Reinforcement Learning</h3>
+                  </div>
+                  <br />
+                </div>
+                <div class="col-xs-6 col-lg-3 col-md-4   mb-3">
+                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                    <i
+                      class="ri-paint-brush-line"
+                      style="font-size: 1.8rem; color: #e361ff"
+                    ></i>
+                    <h3 class="m-0">Web and UX design</h3>
+                  </div>
+                  <br />
+                </div>
+                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
+                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                    <i
+                      class="ri-database-2-line"
+                      style="font-size: 1.8rem; color: #47aeff"
+                    ></i>
+                    <h3 class="m-0">Back end web development</h3>
+                  </div>
+                  <br />
+                </div>
+                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
+                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                    <i
+                      class="ri-gradienter-line"
+                      style="font-size: 1.8rem; color: #ffa76e"
+                    ></i>
+                    <h3 class="m-0">Android native app development</h3>
+                  </div>
+                  <br />
+                </div>
+                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
+                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                    <i
+                      class="ri-file-list-3-line"
+                      style="font-size: 1.8rem; color: #11dbcf"
+                    ></i>
+                    <h3 class="m-0">iOS native app development(Swift)</h3>
+                  </div>
+                  <br />
+                </div>
+                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
+                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                    <i
+                      class="ri-price-tag-2-line"
+                      style="font-size: 1.8rem; color: #4233ff"
+                    ></i>
+                    <h3 class="m-0">Hybrid app development</h3>
+                  </div>
+                  <br />
+                </div>
+                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
+                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                    <i
+                      class="ri-price-tag-2-line"
+                      style="font-size: 1.8rem; color: #4233ff"
+                    ></i>
+                    <h3 class="m-0">API Design and Development</h3>
+                  </div>
+                </div>
+                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
+                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                    <i
+                      class="ri-price-tag-2-line"
+                      style="font-size: 1.8rem; color: #4233ff"
+                    ></i>
+                    <h3 class="m-0">Domain Driven Design and Microservices</h3>
+                  </div>
+                </div>
+              </div>
+            </section>
             <!-- skills section -->
             <section>
               <div class="inline-flex flex-column mb-3">
@@ -1101,7 +1210,7 @@
               </div>
             </section>
             <br />
-            <!-- interests section -->
+            <!-- core competencies section -->
             <section>
               <div class="inline-flex flex-column mb-3">
                 <h2 style="margin-bottom: 0.25rem">Interests</h2>
@@ -1120,7 +1229,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-md-0">
+                <div class="col-xs-6 col-lg-3 col-md-4  mt-md-0">
                   <div class="flex card shadow bg-secondary">
                     <i
                       class="ri-bar-chart-box-line"
@@ -1130,7 +1239,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-md-0">
+                <div class="col-xs-6 col-lg-3 col-md-4  mt-md-0">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-calendar-todo-line"
@@ -1140,7 +1249,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-lg-0">
+                <div class="col-xs-6 col-lg-3 col-md-4  mt-lg-0">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-paint-brush-line"
@@ -1150,7 +1259,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
+                <div class="col-xs-6 col-lg-3 col-md-4 ">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-database-2-line"
@@ -1160,7 +1269,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
+                <div class="col-xs-6 col-lg-3 col-md-4 ">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-gradienter-line"
@@ -1170,7 +1279,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
+                <div class="col-xs-6 col-lg-3 col-md-4 ">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-file-list-3-line"
@@ -1180,7 +1289,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
+                <div class="col-xs-6 col-lg-3 col-md-4 ">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-price-tag-2-line"
