--- a/index.html
+++ b/index.html
@@ -572,18 +572,6 @@
           -ms-flex-pack: justify;
           justify-content: space-between;
         }
-
-        .first-md {
-          -webkit-box-ordinal-group: 0;
-          -ms-flex-order: -1;
-          order: -1;
-        }
-
-        .last-md {
-          -webkit-box-ordinal-group: 2;
-          -ms-flex-order: 1;
-          order: 1;
-        }
       }
 
       @media only screen and (min-width: 75em) {
@@ -700,22 +688,13 @@
           -ms-flex-pack: justify;
           justify-content: space-between;
         }
-
-        .first-lg {
-          -webkit-box-ordinal-group: 0;
-          -ms-flex-order: -1;
-          order: -1;
-        }
-
-        .last-lg {
-          -webkit-box-ordinal-group: 2;
-          -ms-flex-order: 1;
-          order: 1;
-        }
       }
       /* bootstrap utilities */
       .w-100 {
         width: 100%;
+      }
+      .h-100 {
+        height: 100%;
       }
       .m-0 {
         margin: 0;
