--- a/index.html
+++ b/index.html
@@ -428,18 +428,6 @@
         justify-content: space-between;
       }
 
-      .first-xs {
-        -webkit-box-ordinal-group: 0;
-        -ms-flex-order: -1;
-        order: -1;
-      }
-
-      .last-xs {
-        -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-        order: 1;
-      }
-
       @media only screen and (min-width: 48em) {
         .container {
           width: 49rem;
@@ -1015,8 +1003,10 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
-                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                  >
                     <i
                       class="ri-bar-chart-box-line"
                       style="font-size: 1.8rem; color: #5578ff"
@@ -1025,8 +1015,10 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
-                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                  >
                     <i
                       class="ri-calendar-todo-line"
                       style="font-size: 1.8rem; color: #e80368"
@@ -1035,8 +1027,10 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4   mb-3">
-                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                  >
                     <i
                       class="ri-paint-brush-line"
                       style="font-size: 1.8rem; color: #e361ff"
@@ -1045,8 +1039,10 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
-                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                  >
                     <i
                       class="ri-database-2-line"
                       style="font-size: 1.8rem; color: #47aeff"
@@ -1055,8 +1051,10 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
-                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                  >
                     <i
                       class="ri-gradienter-line"
                       style="font-size: 1.8rem; color: #ffa76e"
@@ -1065,8 +1063,10 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
-                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                  >
                     <i
                       class="ri-file-list-3-line"
                       style="font-size: 1.8rem; color: #11dbcf"
@@ -1075,8 +1075,10 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
-                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                  >
                     <i
                       class="ri-price-tag-2-line"
                       style="font-size: 1.8rem; color: #4233ff"
@@ -1085,8 +1087,10 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
-                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                  >
                     <i
                       class="ri-price-tag-2-line"
                       style="font-size: 1.8rem; color: #4233ff"
@@ -1094,8 +1098,10 @@
                     <h3 class="m-0">API Design and Development</h3>
                   </div>
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mb-3">
-                  <div class="flex middle-xs around-xs card shadow bg-secondary h-100">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <div
+                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                  >
                     <i
                       class="ri-price-tag-2-line"
                       style="font-size: 1.8rem; color: #4233ff"
@@ -1208,7 +1214,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mt-md-0">
+                <div class="col-xs-6 col-lg-3 col-md-4 mt-md-0">
                   <div class="flex card shadow bg-secondary">
                     <i
                       class="ri-bar-chart-box-line"
@@ -1218,7 +1224,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mt-md-0">
+                <div class="col-xs-6 col-lg-3 col-md-4 mt-md-0">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-calendar-todo-line"
@@ -1228,7 +1234,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4  mt-lg-0">
+                <div class="col-xs-6 col-lg-3 col-md-4 mt-lg-0">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-paint-brush-line"
@@ -1238,7 +1244,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 ">
+                <div class="col-xs-6 col-lg-3 col-md-4">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-database-2-line"
@@ -1248,7 +1254,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 ">
+                <div class="col-xs-6 col-lg-3 col-md-4">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-gradienter-line"
@@ -1258,7 +1264,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 ">
+                <div class="col-xs-6 col-lg-3 col-md-4">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-file-list-3-line"
@@ -1268,7 +1274,7 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 ">
+                <div class="col-xs-6 col-lg-3 col-md-4">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-price-tag-2-line"
