--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
                     class="flex middle-xs around-xs card shadow bg-secondary h-100"
                   >
                     <i
-                      class="bi bi-shop-window"
+                      class="bi-cpu"
                       style="font-size: 1.8rem; color: #ffbb2c"
                     ></i>
                     <h3 class="m-0">Machine Learning</h3>
@@ -1008,7 +1008,7 @@
                     class="flex middle-xs around-xs card shadow bg-secondary h-100"
                   >
                     <i
-                      class="ri-bar-chart-box-line"
+                      class="bi-diagram-3"
                       style="font-size: 1.8rem; color: #5578ff"
                     ></i>
                     <h3 class="m-0">Deep Learning</h3>
@@ -1020,7 +1020,7 @@
                     class="flex middle-xs around-xs card shadow bg-secondary h-100"
                   >
                     <i
-                      class="ri-calendar-todo-line"
+                      class="bi-node-plus"
                       style="font-size: 1.8rem; color: #e80368"
                     ></i>
                     <h3 class="m-0">Reinforcement Learning</h3>
@@ -1032,7 +1032,7 @@
                     class="flex middle-xs around-xs card shadow bg-secondary h-100"
                   >
                     <i
-                      class="ri-paint-brush-line"
+                      class="bi-layout-text-window-reverse"
                       style="font-size: 1.8rem; color: #e361ff"
                     ></i>
                     <h3 class="m-0">Web and UX design</h3>
@@ -1044,7 +1044,7 @@
                     class="flex middle-xs around-xs card shadow bg-secondary h-100"
                   >
                     <i
-                      class="ri-database-2-line"
+                      class="bi-server"
                       style="font-size: 1.8rem; color: #47aeff"
                     ></i>
                     <h3 class="m-0">Back end web development</h3>
@@ -1056,7 +1056,7 @@
                     class="flex middle-xs around-xs card shadow bg-secondary h-100"
                   >
                     <i
-                      class="ri-gradienter-line"
+                      class="bi-phone-fill"
                       style="font-size: 1.8rem; color: #ffa76e"
                     ></i>
                     <h3 class="m-0">Android native app development</h3>
@@ -1068,7 +1068,7 @@
                     class="flex middle-xs around-xs card shadow bg-secondary h-100"
                   >
                     <i
-                      class="ri-file-list-3-line"
+                      class="bi-phone"
                       style="font-size: 1.8rem; color: #11dbcf"
                     ></i>
                     <h3 class="m-0">iOS native app development(Swift)</h3>
@@ -1080,7 +1080,7 @@
                     class="flex middle-xs around-xs card shadow bg-secondary h-100"
                   >
                     <i
-                      class="ri-price-tag-2-line"
+                      class="bi-phone-landscape"
                       style="font-size: 1.8rem; color: #4233ff"
                     ></i>
                     <h3 class="m-0">Hybrid app development</h3>
@@ -1089,24 +1089,26 @@
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div
-                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                    class="row middle-xs around-xs card shadow bg-secondary h-100"
                   >
                     <i
-                      class="ri-price-tag-2-line"
-                      style="font-size: 1.8rem; color: #4233ff"
+                      class="col-xs bi-terminal"
+                      style="font-size: 1.8rem; color: #ff335f"
                     ></i>
-                    <h3 class="m-0">API Design and Development</h3>
+                    <h3 class="col-xs m-0">API Design and Development</h3>
                   </div>
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div
-                    class="flex middle-xs around-xs card shadow bg-secondary h-100"
+                    class="row middle-xs around-xs card shadow bg-secondary h-100"
                   >
                     <i
-                      class="ri-price-tag-2-line"
-                      style="font-size: 1.8rem; color: #4233ff"
+                      class="col-xs bi-stack"
+                      style="font-size: 1.8rem; color: #33f8ff"
                     ></i>
-                    <h3 class="m-0">Domain Driven Design and Microservices</h3>
+                    <h3 class="col-xs m-0">
+                      Domain Driven Design and Microservices
+                    </h3>
                   </div>
                 </div>
               </div>
@@ -1121,7 +1123,7 @@
                 <div class="col-xs col-md-6">
                   <div>
                     <div class="row between-xs mb-2">
-                      <span class="col-xs">HTML</span
+                      <span class="col-xs">Java</span
                       ><i class="col-xs" style="text-align: end">100%</i>
                     </div>
                     <progress
@@ -1133,7 +1135,7 @@
                   <br />
                   <div>
                     <div class="row between-xs mb-2">
-                      <span class="col-xs">CSS</span
+                      <span class="col-xs">Python </span
                       ><i class="col-xs" style="text-align: end">90%</i>
                     </div>
                     <progress
@@ -1145,7 +1147,7 @@
                   <br />
                   <div>
                     <div class="row between-xs mb-2">
-                      <span class="col-xs">JavaScript</span
+                      <span class="col-xs">Php </span
                       ><i class="col-xs" style="text-align: end">75%</i>
                     </div>
                     <progress
@@ -1158,7 +1160,7 @@
                 <div class="col-xs col-md-6">
                   <div>
                     <div class="row between-xs mb-2">
-                      <span class="col-xs">PHP</span
+                      <span class="col-xs">Javascript </span
                       ><i class="col-xs" style="text-align: end">80%</i>
                     </div>
                     <progress
@@ -1170,7 +1172,7 @@
                   <br />
                   <div>
                     <div class="row between-xs mb-2">
-                      <span class="col-xs">WordPress</span
+                      <span class="col-xs">Typescript </span
                       ><i class="col-xs" style="text-align: end">90%</i>
                     </div>
                     <progress
@@ -1182,7 +1184,67 @@
                   <br />
                   <div>
                     <div class="row between-xs mb-2">
-                      <span class="col-xs">Photoshop</span
+                      <span class="col-xs">Html & CSS</span
+                      ><i class="col-xs" style="text-align: end">55%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="55"
+                      max="100"
+                    ></progress>
+                  </div>
+                  <br />
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">Dart</span
+                      ><i class="col-xs" style="text-align: end">55%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="55"
+                      max="100"
+                    ></progress>
+                  </div>
+                  <br />
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">C</span
+                      ><i class="col-xs" style="text-align: end">55%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="55"
+                      max="100"
+                    ></progress>
+                  </div>
+                  <br />
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">C++</span
+                      ><i class="col-xs" style="text-align: end">55%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="55"
+                      max="100"
+                    ></progress>
+                  </div>
+                  <br />
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">Swift</span
+                      ><i class="col-xs" style="text-align: end">55%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="55"
+                      max="100"
+                    ></progress>
+                  </div>
+                  <br />
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">MATLAB</span
                       ><i class="col-xs" style="text-align: end">55%</i>
                     </div>
                     <progress
